Allow universal CORS origin patterns (*.vercel.app & localhost) for seamless authentication